--- a/user-management-app/docker-compose.yml
+++ b/user-management-app/docker-compose.yml
@@ -1,7 +1,6 @@
 version: '3.8'
 
 services:
-  # MongoDB Database
   mongodb:
     image: mongo:7.0
     container_name: user-management-mongodb
@@ -14,21 +13,11 @@ services:
       MONGO_INITDB_DATABASE: ${MONGODB_DATABASE}
     volumes:
       - mongodb_data:/data/db
-      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
     networks:
       - user-management-network
-    healthcheck:
-      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 40s
 
-  # Backend API
   backend:
-    build: 
-      context: ./backend
-      dockerfile: Dockerfile
+    image: sriniv7654/usermanagement:backend-latest
     container_name: user-management-backend
     restart: unless-stopped
     ports:
@@ -41,25 +30,12 @@ services:
       JWT_EXPIRE: ${JWT_EXPIRE}
       FRONTEND_URL: ${FRONTEND_URL}
     depends_on:
-      mongodb:
-        condition: service_healthy
-    volumes:
-      - ./backend:/app
-      - /app/node_modules
+      - mongodb
     networks:
       - user-management-network
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 40s
 
-  # Frontend Application
   frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
+    image: sriniv7654/usermanagement:frontend-latest
     container_name: user-management-frontend
     restart: unless-stopped
     ports:
@@ -67,16 +43,9 @@ services:
     environment:
       VITE_API_URL: ${VITE_API_URL}
     depends_on:
-      backend:
-        condition: service_healthy
+      - backend
     networks:
       - user-management-network
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:80"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 40s
 
 volumes:
   mongodb_data:
