--- a/user-management-app/frontend/Dockerfile
+++ b/user-management-app/frontend/Dockerfile
@@ -5,8 +5,8 @@ WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
-RUN npm install 
-# Install ALL dependencies (including devDependencies needed for build)
+RUN npm install
+# Install dependencies
 RUN npm ci
 
 # Copy source code
@@ -21,8 +21,11 @@ FROM nginx:alpine
 # Copy built files
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Copy nginx configuration
+# Copy custom nginx configuration
 COPY nginx.conf /etc/nginx/nginx.conf
+
+# Create directory for temporary files
+RUN mkdir -p /tmp/nginx && chown -R nginx:nginx /tmp/nginx
 
 EXPOSE 80
 
