working in kyma

--- a/user-management-app/frontend/nginx.conf
+++ b/user-management-app/frontend/nginx.conf
@@ -1,27 +1,25 @@
-events {
-    worker_connections 1024;
-}
+# This file should ONLY contain the server block.
+# The 'events' and 'http' blocks are in the main nginx.conf from the base image.
 
-http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
+pid /tmp/nginx.pid;
 
-    server {
-        listen 80;
-        server_name localhost;
-        root /usr/share/nginx/html;
-        index index.html;
+server {
+    listen 8080;
+    server_name localhost;
+    root /usr/share/nginx/html;
+    index index.html;
 
-        location / {
-            try_files $uri $uri/ /index.html;
-        }
+    # Serve static files and the main index.html for any other route
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
 
-        location /api {
-            proxy_pass http://backend:5000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+    # Reverse proxy for all API calls
+    location /api {
+        proxy_pass http://backend:5000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
