--- a/user-management-app/frontend/Dockerfile
+++ b/user-management-app/frontend/Dockerfile
@@ -1,32 +1,18 @@
-# Multi-stage build for production
-FROM node:18-alpine AS builder
+# Use a Node.js base image
+FROM node:18-alpine
 
 WORKDIR /app
 
-# Copy package files
-COPY package*.json ./
+# Copy package.json and install dependencies
+COPY package.json ./
 RUN npm install
-# Install dependencies
-RUN npm ci
 
-# Copy source code
+# Copy all the application files
+# This includes index.html, server.js, and the public/ and src/ directories
 COPY . .
 
-# Build the application
-RUN npm run build
+# Expose the port the server is running on
+EXPOSE 8080
 
-# Production stage
-FROM nginx:alpine
-
-# Copy built files
-COPY --from=builder /app/dist /usr/share/nginx/html
-
-# Copy custom nginx configuration
-COPY nginx.conf /etc/nginx/nginx.conf
-
-# Create directory for temporary files
-RUN mkdir -p /tmp/nginx && chown -R nginx:nginx /tmp/nginx
-
-EXPOSE 80
-
-CMD ["nginx", "-g", "daemon off;"]
+# Start the Node.js server
+CMD ["npm", "start"]
